<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">DentalTechnician HandBook</string>
    <string name="main_menu"><b>Главная</b></string>
    <string name="rem_full_menu">Полные съёмные</string>
    <string name="rem_part_menu">Частичные съёмные</string>
    <string name="fix_menu">Несъёмные</string>
    <string name="imp">Об имплантах</string>
    <string name="cad_cam">О Cad-Cam</string>
    <string name="cad_cam_title">Cad-Cam</string>
    <string name="cer_main">О керамических протезах</string>
    <string name="rem_full">О полных съёмных протезах</string>
    <string name="rem_part">О частично съёмных протезах</string>
    <string name="fix">О несъёмных протезах</string>
    <string name="cast_main">О литье</string>
    <string name="material">Материалы и оборудование</string>
    <string name="imp_mini">Зубной имплантат — искусственно изготовленная, чаще всего многокомпонентная конструкция, используемая для внедрения в костную ткань челюсти с последующим сращением с целью протезирования.</string>
    <string name="cad_cam_mini">Система зубного протезирования CAD/CAM — способ изготовления ортопедических конструкций с применением передовых компьютерных технологий. Современная методика призвана автоматизировать процесс создания протеза: заготовка моделируется в электронной программе, а в дальнейшем фрезеруется на станке с ЧПУ.</string>
    <string name="cer_main_mini">Керамика – это прочный и эстетичный материал, который активно применяется для протезирования зубов. Из него изготавливаются зубные коронки, вкладки, мосты и съемные протезы. Керамика наиболее популярна в стоматологии.</string>
    <string name="rem_full_mini">Полные съемные конструкции удерживаются на деснах за счет обычной силы присасывания. Если конструкция предназначена для использования на верхней челюсти, то она представляет собой пластинку, охватывающую небо и челюсть. Закрепление протеза в полости рта происходит за счет присасывания.</string>
    <string name="rem_part_mini">Системы, фиксируемые с помощью прикрепления к родным зубам, называются частично-съемными протезами. Частично-съемное протезирование проводится в том случае, когда у пациента на челюсти имеется хотя бы один или несколько зубов. Эти зубы будут служить в качестве опоры для съемного протеза.</string>
    <string name="fix_mini">Несъемные протезы невозможно самостоятельно извлечь из полости рта. Они фиксируются на специальный стоматологический цемент, а опорой выступают оставшиеся целые зубы. К преимуществам данной технологии относят долговечность, прочность и эффективность. Из минусов можно выделить высокую стоимость.</string>
    <string name="cast_main_mini">Литьё - это процесс производства фасонных отливок путём заполнения жидким металлом заранее приготовленных форм, в которых металл затвердевает.</string>
    <string name="material_mini">Изготовление зубных протезов требует не только знания теории, имения опыта, но и наличия необходимых материалов и оборудования, без которых изготовление протеза нельзя представить.</string>
    <string name="impression_mat">Оттискные материалы</string>
    <string name="gypsum_mat">Гипсы</string>
    <string name="wax_mat">Воска</string>
    <string name="whitewash_mat">Отбелы</string>
    <string name="acrylic_mat">Пластмассы</string>
    <string name="met_mat">Металлы</string>
    <string name="cer">Керамика</string>
    <string name="cla">Бюгельные</string>
    <string name="pr_by_imp">Протезы на имплантах</string>
    <string name="pr_imp">На имплантах</string>
    <string name="header">DentalTechnician HandBook</string>
    <string name="logo">logo</string>
    <string name="additional">Дополнительно</string>
    <string name="con">Контакты</string>
    <string name="th">Техническая поддержка</string>
    <string name="soon_content">скоро здесь будет контент</string>
    <string name="test_class_content" tools:ignore="Typos">paragraph1</string>
    <string name="test_class_content2">paragraph2</string>
    <string name="prothesis">протез</string>
    <string name="veneers_lumineers">Виниры(люминиры)</string>
    <string name="incl">Вкладки</string>
    <string name="e_max">Вкладки E-max</string>
    <string name="e_max_man">О вкладках E-max</string>
    <string name="crowns">Коронки</string>
    <string name="bridges">Мостовидные протезы</string>
    <string name="quat">Квадротти (Quattro Ti)</string>
    <string name="plast">Пластиночные</string>
    <string name="neylon">Нейлоновые</string>
    <string name="acry">Акри Фри (Acry Free)</string>
    <string name="cast">Литьё</string>
    <string name="about_imp">Всё о имплантах</string>
    <string name="about_rem">Всё о съёмных протезах</string>
    <string name="about_cla">Всё о бюгельных протезах</string>
    <string name="about_fix">Всё о несъёмных протезах</string>
    <string name="about_cast_on_main">Всё о литье</string>
    <string name="acrylic_bridge">Пластмассовый мост</string>
    <string name="cast_bridge">Литой мост</string>
    <string name="met_acrylic_bridge">Металлопластмассовый мост</string>
    <string name="met_cer_bridge">Металлокерамический мост</string>
    <string name="zir_bridge">Циркониевый мост</string>
    <string name="cer_bridge">Керамический мост</string>
    <string name="acrylic_crown">Пластмассовая коронка</string>
    <string name="stamped_crown">Штампованная коронка</string>
    <string name="stamp_met_bridge">Штампованно-паянный мостовидный протез</string>
    <string name="cast_crown">Цельнолитая коронка</string>
    <string name="met_cer_crown">Металлокерамическая коронка</string>
    <string name="zir_crown">Циркониевая коронка</string>
    <string name="cer_crown">Керамическая коронка</string>
    <string name="met_acrylic_crown">Металлопластмассовая коронка</string>
    <string name="tabs">Металлические и композитные вкладки</string>
    <string name="rem_on_imp">Условно-съемный протез на имплантах</string>
    <string name="rem_on_imp_stick">Условно-съемный протез на балке</string>
    <string name="use_cad_cam">Использований Cad-Cam технологий в несъёмном протезировании</string>
    <string name="veneers">Виниры</string>
    <string name="veneers_classic">Виниры классические</string>
    <string name="lumineers">Люминиры</string>
    <string name="swipe">swipe</string>
    <string name="clam">На кламмерах</string>
    <string name="attach">На аттачментах</string>
    <string name="teles">На телескопических коронках</string>
    <string name="part">Частичные</string>
    <string name="whole">Классический полный съёмный проетез</string>
    <string name="content_logo_acrylic_bridge">Акриловый мостовидный протез</string>
    <string name="part_rem_cla">Частично-съемный протез</string>
    <string name="select">Select</string>
    <string name="plus_minus">Плюсы и минусы</string>
    <string name="indications_and_contraindications">Показания и противопоказания</string>
    <string name="materials_and_equipment">Материалы и оборудование</string>
    <string name="stages_of_manufacturing">Этапы изготовления</string>
    <string name="subject">Тема направления</string>
    <string name="cad_cam1">
        Многие наверняка слышали про станки с цифровым программным управлением. Они применяются давно. Однако в стоматологии такие технологии начали разрабатываться лишь в середине 80-х годов прошлого века. В основе работы данных станков как раз и заложена система CAD/CAM. Удобные для работы образцы появились лишь в последние годы. Однако уже получили широкое распространение. На сегодняшний день системы CAD/CAM прочно утвердились в таком важном разделе медицины, как ортопедия.
        \n\n CAD/CAM – сокращение от «Computer Assisted Design/Computer Aided Manufacturing». На русский язык это переводится как «компьютерное моделирование/производство под управлением компьютера».
        \n\n Данная методика является самой современной компьютерной технологией моделирования и фрезерования каркасов зубных протезов.
    </string>
    <string name="cad_cam2">
        CAD/CAM- технология позволяет быстро получать каркасы зубных протезов высочайшей точности.
        \n\n Для пациента стоматологической клиники CAD/CAM-технология - это более быстрое и более точное изготовление коронок, мостов, вкладок, индивидуальных абатментов, временных коронок и различных моделей, которые до появления CAD/CAM изготавливали с помощью литья.
        \n\n •	CAD/CAM – это высококлассное компьютерное моделирование, заменяющее моделирование из воска. Точность изготовления становится намного более высокой. Отклонение всего 15-20 мкм, а при ручной работе – 50-70 мкм.
        \n\n
         •	Осуществлять процесс моделирования можно прямо в клинике. Высокая скорость выполнения работ - это неоспоримый плюс компьютерного моделирования.
    </string>
    <string name="cad_cam3">
        Итак, преимущества применения технологии CAD/CAM в стоматологии:\n\n
        •	большая точность изготовления с минимальными отклонениями\n\n
        •	автоматизация производства, практически исключающая возможность ошибок\n\n
        •	высокая производительность\n\n
        •	возможность моделирования в одном месте, а изготовления изделий в другом\n\n
        •	применение различных видов материалов\n\n
    </string>
    <string name="imp1">
        Если верить медицинской статистике, во всем мире лишь 20% людей могут похвастаться тем, что у них полностью здоровые зубы. В России, как утверждают специалисты, ситуация еще хуже. Многие идут к врачу в самый последний момент, когда больной зуб уже поздно лечить — приходится его удалять.
        \n\n Отсутствие зубов сильно портит внешность. Как решить эту проблему? Самым современным методом протезирования зубов является имплантация. Что это такое? В чем преимущество имплантации перед другими методиками? Как правильно выбрать стоматологическую клинику для лечения? Что такое зубной имплантант? На эти и другие вопросы здесь вы найдете ответ.
        \n\n Предположим, у пациента нет одного зуба, и он хочет поставить протез. Если делать это по старинке, то необходимо обточить два соседних зуба, удалить нервы, запломбировать каналы и сделать мост. Таким образом, протез держится на соседних обточенных зубах. Фактически во время процедуры соседние зубы попросту убиваются, становятся мертвыми. Считается, что из-за этого они потом быстрее выпадают. Восстанавливая один зуб, человек рискует через некоторое время потерять сразу три.
    </string>
    <string name="example">Пример изделия</string>
</resources>