<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentAcrylicFragment"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/item_content"
    android:scrollbars="none"
    android:padding="7dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/item_content_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/faceContent"
            style="@style/main_image_content_page"
            android:src="@drawable/acrylic_bridge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.454"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck"
            android:contentDescription="@string/example" />

        <TextView
            android:id="@+id/contentLogoText"
            style="@style/logo_text"
            android:text="@string/content_logo_acrylic_bridge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/faceContent" />

        <LinearLayout
            android:id="@+id/additional_content1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/contentLogoText">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/button_to_open_content1"
                style="@style/item_additional_content"
                android:layout_marginTop="@dimen/margin_top_first_additional_content"
                android:background="@color/pink_skin"
                android:onClick="additionalCont1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/icon_select1"
                    style="@style/icon_of_item_additional_content"
                    android:contentDescription="@string/select"
                    android:src="@drawable/icon_select"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_button_first1"
                    style="@style/text_of_item_additional_content"
                    android:text="@string/plus_minus"
                    app:layout_constraintStart_toEndOf="@+id/icon_select1"
                    app:layout_constraintTop_toTopOf="@+id/icon_select1" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/content_text_add_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/icon_margin"
                android:layout_marginEnd="@dimen/end_margin_select_item"
                android:background="@color/text_pink_add_content_background"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_to_open_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/app_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/additional_content2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/additional_content1">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/button_to_open_content2"
                style="@style/item_additional_content"
                android:background="@color/gold"
                android:onClick="additionalCont2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/icon_select2"
                    style="@style/icon_of_item_additional_content"
                    android:contentDescription="@string/select"
                    android:src="@drawable/icon_select"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_button_first2"
                    style="@style/text_of_item_additional_content"
                    android:text="@string/indications_and_contraindications"
                    app:layout_constraintStart_toEndOf="@+id/icon_select2"
                    app:layout_constraintTop_toTopOf="@+id/icon_select2" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/content_text_add_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/icon_margin"
                android:layout_marginEnd="@dimen/end_margin_select_item"
                android:background="@color/text_gold_add_content_background"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_to_open_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/app_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/additional_content3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/additional_content2">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/button_to_open_content3"
                style="@style/item_additional_content"
                android:background="@color/green_white"
                android:onClick="additionalCont3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/icon_select3"
                    style="@style/icon_of_item_additional_content"
                    android:contentDescription="@string/select"
                    android:src="@drawable/icon_select"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_button_first3"
                    style="@style/text_of_item_additional_content"
                    android:text="@string/materials_and_equipment"
                    app:layout_constraintStart_toEndOf="@+id/icon_select3"
                    app:layout_constraintTop_toTopOf="@+id/icon_select3" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/content_text_add_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/icon_margin"
                android:layout_marginEnd="@dimen/end_margin_select_item"
                android:background="@color/text_green_add_content_background"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_to_open_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/app_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/additional_content4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/additional_content3">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/button_to_open_content4"

                style="@style/item_additional_content"
                android:background="@color/dark_blue"
                android:onClick="additionalCont4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/icon_select4"
                    style="@style/icon_of_item_additional_content"
                    android:contentDescription="@string/select"
                    android:src="@drawable/icon_select"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_button_first4"
                    style="@style/text_of_item_additional_content"
                    android:text="@string/stages_of_manufacturing"
                    app:layout_constraintStart_toEndOf="@+id/icon_select4"
                    app:layout_constraintTop_toTopOf="@+id/icon_select4" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/content_text_add_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/icon_margin"
                android:layout_marginEnd="@dimen/end_margin_select_item"
                android:background="@color/text_blue_add_content_background"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_to_open_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/app_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>